# x402-facilitator

./: .dockerignore  CONTRIBUTING.md  PROJECT-IDEAS.md  README.md  ROADMAP.md
.github/: pull_request_template.md
.github/workflows/: check_format.yml  check_python.yml  java.yml  publish_pypi_x402.yml
e2e/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.ts  tsconfig.json
e2e/clients/: text-client-protocol.txt
e2e/clients/axios/: .env-local  README.md  index.ts  package.json  test.config.json  tsconfig.json
e2e/clients/fetch/: README.md  index.ts  package.json  test.config.json
e2e/clients/httpx/: main.py  pyproject.toml  test.config.json
e2e/clients/requests/: main.py  pyproject.toml  test.config.json
e2e/servers/: text-server-protocol.txt
e2e/servers/express/: .env-local  README.md  index.ts  package.json  run.sh  test.config.json
e2e/servers/fastapi/: main.py  pyproject.toml  run.sh  test.config.json
e2e/servers/flask/: main.py  pyproject.toml  test.config.json
e2e/servers/gin/: go.mod  go.sum  main.go  run.sh  test.config.json
e2e/servers/hono/: index.ts  test.config.json
e2e/servers/next/: README.md  middleware.ts  next.config.ts  package.json  test.config.json
e2e/src/: discovery.ts  logger.ts  proxy-base.ts  types.ts
e2e/src/clients/: generic-client.ts
e2e/src/servers/: generic-server.ts
examples/python/: README.md  sync.py
examples/python/clients/httpx/: .env-local  README.md  extensible.py  main.py  pyproject.toml
examples/python/clients/requests/: README.md  extensible.py  main.py  pyproject.toml
examples/python/discovery/: README.md  main.py  pyproject.toml
examples/python/fullstack/fastapi/: .env-local  README.md  main.py
examples/python/fullstack/fastapi/static/: premium.html
examples/python/fullstack/flask/: .env-local  README.md  main.py  pyproject.toml
examples/python/servers/advanced/: .env-local  README.md  main.py  pyproject.toml
examples/python/servers/fastapi/: README.md  main.py  pyproject.toml
examples/python/servers/flask/: README.md  main.py  pyproject.toml
examples/python/servers/mainnet/: .env-local  README.md  main.py  pyproject.toml
examples/typescript/: README.md  pnpm-lock.yaml  pnpm-workspace.yaml
examples/typescript/clients/axios/: index.ts  multi-network-signer.ts  package.json
examples/typescript/clients/cdp-sdk/: .env-local  README.md  index.ts  package.json
examples/typescript/clients/chainlink-vrf-nft/: README.md  client.ts  package-lock.json  package.json  resource.ts
examples/typescript/clients/fetch/: index.ts  multi-network-signer.ts  package.json
examples/typescript/discovery/: README.md  index.ts  package.json
examples/typescript/dynamic_agent/: agent.ts
examples/typescript/facilitator/: .env-local  .env.example  Dockerfile  README.md  index.ts  index.ts.bak  package.json  tsconfig.json
examples/typescript/facilitator/src/database/: client.ts  migration.ts  schema.ts
examples/typescript/facilitator/src/services/: blockchainQuery.ts  mempool.ts  nonceManager.ts
examples/typescript/facilitator/src/utils/: batchSettle.ts  logger.ts
examples/typescript/fullstack/auth_based_pricing/: .env-local  README.md  backend.ts  client.ts
examples/typescript/fullstack/browser-wallet-example/: .gitignore  README.md  package-lock.json  package.json
examples/typescript/fullstack/browser-wallet-example/client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/typescript/fullstack/farcaster-miniapp/: README.md  env.example  middleware.ts  package.json
examples/typescript/fullstack/mainnet/: .env-local  README.md  middleware.ts  next.config.ts  package.json
examples/typescript/fullstack/next/: .env-local  README.md  middleware.ts  package-lock.json  package.json
examples/typescript/fullstack/next-advanced/: README.md  middleware.ts  package.json
examples/typescript/mcp/: README.md
examples/typescript/mcp-embedded-wallet/: .env.example  .gitignore  README.md  TODO.md  electron.ts  eslint.config.js  index.html  index.ts  logger.ts  mcp.ts  package.json  pnpm-lock.yaml  preload.js  tsconfig.json  vite.config.ts
examples/typescript/mcp-embedded-wallet/src/: .eslintrc.json  .prettierrc  App.tsx  ChainProvider.tsx  cdpConfig.ts  main.module.css  main.tsx  package.json  vite-env.d.ts  window.ts
examples/typescript/servers/advanced/: README.md  index.ts
examples/typescript/servers/express/: index.ts  package.json
examples/typescript/servers/hono/: .env-local  README.md  index.ts
go/: README.md
go/pkg/facilitatorclient/: facilitatorclient.go  facilitatorclient_test.go
go/pkg/gin/: middleware.go  middleware_test.go
go/pkg/types/: types.go
java/: .gitignore  README.md  checkstyle-suppressions.xml  checkstyle.xml  pom.xml  spotbugs-exclude.xml
python/x402/: README.md  pyproject.toml
python/x402/src/x402/: __init__.py  chains.py  common.py  encoding.py  exact.py  facilitator.py  networks.py  path.py  paywall.py  template.py  types.py
python/x402/src/x402/clients/: __init__.py  base.py  httpx.py  requests.py
python/x402/src/x402/fastapi/: middleware.py
python/x402/src/x402/flask/: middleware.py
python/x402/src/x402/static/: paywall.html
python/x402/tests/: test_common.py  test_encoding.py  test_exact.py  test_paywall.py  test_types.py
python/x402/tests/clients/: test_base.py  test_httpx.py  test_requests.py
python/x402/tests/fastapi_tests/: test_middleware.py
python/x402/tests/flask_tests/: test_middleware.py
specs/: transport_template.md  x402-specification.md
specs/schemes/exact/: scheme_exact_evm.md  scheme_exact_sui.md  scheme_exact_svm.md
specs/transports/: a2a.md  http.md  mcp.md
typescript/: pnpm-lock.yaml
typescript/site/: README.md  middleware.ts  next.config.ts  package.json  tailwind.config.ts
typescript/site/app/: layout.tsx  page.tsx
typescript/site/app/components/: NavBar.tsx
typescript/site/app/ecosystem/: data.ts  ecosystem-client.tsx  facilitator-card.tsx  page.tsx  partner-card.tsx
typescript/site/public/: site.webmanifest
typescript/site/types/: viem.d.ts
(+129 files in other folders)
