[project]
name = "x402-requests-e2e"
version = "0.1.0"
description = "Python requests client for x402 e2e tests"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "eth-account>=0.8.0",
    "python-dotenv>=1.0.0",
    "x402"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false 

[tool.uv.sources]
x402 = { path = "../../../python/x402", editable = true } 