[project]
name = "client-discovery-example"
version = "0.1.0"
description = "Example of using the x402 discovery layer"
requires-python = ">=3.10"
dependencies = [
    "x402",
    "cdp-sdk>=1.31.2",
    "Flask>=3.1.1",
    "uvicorn>=0.27.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false

[tool.uv.sources]
x402 = { path = "../../../python/x402", editable = true } 