[project]
name = "x402-httpx-example"
version = "0.1.0"
description = "Example of using x402 with httpx"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "eth-account>=0.8.0",
    "x402"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false

[tool.uv.sources]
x402 = { path = "../../../../python/x402", editable = true } 