[project]
name = "x402-advanced-server-example"
version = "0.1.0"
description = "Advanced example of using FastAPI server with x402 payment handling without middleware"
requires-python = ">=3.10"
dependencies = [
    "x402",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false

[tool.uv.sources]
x402 = { path = "../../../../python/x402", editable = true } 